Parandusi ja täiendusi

--- a/04-kaardirakendused.Rmd
+++ b/04-kaardirakendused.Rmd
@@ -60,12 +60,15 @@ Ruumiandmed on alati seotud mingi kohaga. Maakera on kolmemõõtmeline ja põhim
 
 Esmalt tuleb objektid ja nähtused siduda mingite koordinaatidega. **Koordinaadid** on arvud, mis määravad punkti asendi tasandil või ruumis ning **koordinaatsüsteem** vastavalt teatud reeglitel põhinev raamistik, mida nende arvude määramiseks kahe- või kolmemõõtmelises ruumis kasutatakse. Ühtse koordinaatsüsteemi abil on võimalik siduda ja koos esitada erinevaid andmeid, ent kui tahame määrata koordinaate maapinnal, siis koordinaatsüsteemist üksi ei piisa. Vaja on siduda see ka Maa kui füüsilise keha ja selle kujuga.
 
-Maa üldist kuju kirjeldab geodeetiline referentssüsteem ehk **daatum**, mis esitab Maa matemaatilise mudeli nii, et see vastaks võimalikult hästi Maa tegelikule kujule, sageli kui pöördellipsoidi või sferoidi. Erinevate ellipsoidide mõõtmed võivad pisut erineda (nt nende pooltelgede pikkused või ellipsoidi lapikus), sest Maa tegelik füüsiline kuju (geoid) on ellipsoidist märksa keerulisem. Nõnda sobivad mõned **lokaalsed** daatumid, mis ei ole tingimata seotud Maa keskpunktiga, väikesele maa-alale paremini, sest järgivad selles konkreetses kohas paremini Maa tegelikku kuju, ent ei ole jällegi hästi kasutatavad teistes kohtades. 
+Maa tegelik füüsiline kuju on ebakorrapärane ja pidevalt muutuv ning seda on väga raske adekvaatselt mõõta. Maa pinna geofüüsilist mudelit nimetatakse geodeesias **geoidiks**, mis esitab Maa kuju tingimustes, kus see sõltuks ainult gravitatsiooniväljast ja Maa pöörlemisest. See on samuti üpris keerukas ning korrapäratu vorm ning ehkki see võimaldab üsna täpselt määrata nt objektide kõrgust, ei sobi see väga hästi nn horisontaalsete koordinaatide määramiseks. 
+Seepärast kasutatakse pikkus- ja laiuskraadide määramiseks, kauguste ja pindalade arvutamiseks ning kaartide tegemiseks referentspinnana enamasti **ellipsoidi** kui Maa idealiseeritud matemaatilist mudelit. Erinevate ellipsoidide mõõtmed võivad pisut erineda (nt nende pooltelgede pikkused või ellipsoidi lapikus), sest Maa tegelik füüsiline kuju ja geoid on ellipsoidist märksa keerulisem. Nõnda sobivad mõned **lokaalsed** daatumid, mis ei ole tingimata seotud Maa keskpunktiga, väikesele maa-alale paremini, sest järgivad selles konkreetses kohas paremini Maa tegelikku kuju, ent ei ole jällegi hästi kasutatavad teistes kohtades. 
 Eestis kasutatakse tänapäeval **globaalset** geotsentrilist ellipsoidi **GRS80**, mis on praktiliselt identne palju laialdasemalt kasutusel oleva globaalse **WGS84** ellipsoidiga. 
 
 ```{r geoid-ellipsoid, echo = F, fig.align = "center", fig.show = "hold", fig.cap="Geoid, ellipsoid ja maapind (allikas: [Maa-amet](https://geoportaal.maaamet.ee/est/Ruumiandmed/Geodeetilised-andmed/Geodeetilised-vorgud/Geoid-p287.html))"}
 knitr::include_graphics(here::here("imgs", "geoid_ellipsoid_maapind.PNG"))
 ```
+
+Ellipsoid ja selle orienteerimise parameetrid (nt kus on ellipsoidi keskpunkt või millise maapinna punkti järgi see on orienteeritud) moodustavad nn **daatumi** ehk geodeetilise referentssüsteemi. Daatum määrab ära, kui täpselt mingi ellipsoid geoidi pinnale vastab (kui lähedal need teineteisele on). Geograafilised koordinaadid on alati seotud mingi daatumiga. 
 
 ```{r daatumid, echo = F, fig.align = "center", fig.show = "hold", fig.cap="Erinevad daatumid: globaalne, geotsentriline WGS84 ja lokaalne NAD27 ([allikas](https://slideplayer.com/slide/3432120/))"}
 knitr::include_graphics(here::here("imgs", "lokaalsed_globaalsed_daatumid.jpg"))
@@ -79,7 +82,7 @@ Daatumi ja sobiliku koordinaatsüsteemi abil saamegi määrata objektide asukoht
 > Kui iga kraad on jagatud 60 minutiks ja iga minut 60 sekundiks, siis kuidas kujutada kümnendsüsteemis koordinaate 58°22'48"N, 26°43'20"E?
 
 
-Selleks aga, et nüüd geograafilises ruumis paiknevaid objekte kujutada tasapinnalisel mudelil ehk kaardil, peame valima kaardi **projektsiooni**, mis määrab viisi, kuidas sfääriline pind tasapinnal esitatakse ning kuidas ruumilised koordinaadid (GCS) konverteeritakse ümber **tasapinnalisteks koordinaatideks** (PCS ehk *projected coordinate system*), mida väljendatakse *x*-i ja *y* abil. Sisuliselt määrab projektsioon ära ka selle, milliseid alasid maakeral me oleme nõus oma kaardil rohkem moonutama ja milliseid vähem ning mispidi me mingeid alasid kaardil venitame või kokku surume. Kui tahame kujutada ümmargust Maad kahemõõtmelisel tasapinnal, siis paratamatult peame mingit osa maakerast moonutama. Ühe või teise projektsiooni valimisel moonutame rohkem kas pindalasid, nurkasid, kujusid või joonpikkuseid.  
+Selleks aga, et nüüd geograafilises ruumis paiknevaid objekte kujutada tasapinnalisel mudelil ehk kaardil, peame valima kaardi **projektsiooni**, mis määrab matemaatilise viisi, kuidas sfääriline pind tasapinnal esitatakse ning kuidas ruumilised koordinaadid (GCS) konverteeritakse ümber **tasapinnalisteks koordinaatideks** (PCS ehk *projected coordinate system*), mida väljendatakse *x*-i ja *y* abil. Sisuliselt määrab projektsioon ära ka selle, milliseid alasid maakeral me oleme nõus oma kaardil rohkem moonutama ja milliseid vähem ning mispidi me mingeid alasid kaardil venitame või kokku surume. Kui tahame kujutada ümmargust Maad kahemõõtmelisel tasapinnal, siis paratamatult peame mingit osa maakerast moonutama. Ühe või teise projektsiooni valimisel moonutame rohkem kas pindalasid, nurkasid, kujusid või joonpikkuseid.  
 
 ```{r projections, echo = FALSE, fig.show = "hold", fig.align = "center", out.width = "100%", fig.cap = "[Erinevad projektsioonid](https://i.redd.it/8ssm7hfbeko21.png)"}
 knitr::include_graphics(here::here("imgs", "projections.png"))
